Implemented JSTL EL rules for coercing of empty string and null values
git-svn-id: https://svn.apache.org/repos/asf/tomcat@305432 13f79535-47bb-0310-9956-ffa450edef68